--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">MyTestOSM</string>
+    <string name="info_1"> Острая пицца «Пепперони с халапеньо» — мексиканская забава из колбасных кружочков, устилающих основу, пропитывая ее чесночно-копченным ароматом. Вызывает сильный аппетит и настрой на плотный перекус. Халапеньо добавляет огонька и согревает изнутри, даже если пицца немного остыла.</string>
+    <string name="info_2">Экзотика в нашем меню – пицца Vegan. Пробуя на вкус эту уникальную в своем роде пиццу, вы можете ощутить прилив энергии и сил, вызывающих желание страстно и горячо танцевать, под сопровождение жаркого гавайского танго. Именно в этом танце сплелась копченая курочка с ананасом и сыром молодых буйволиц — Моцарелла. </string>
+    <string name="info_3">Утонченная, томатная и ароматная «Маргарита» слишком сладкая и сочная, чтобы забыть ее вкус. Не смотря на отсутствие мяса, курицы или колбасок, она-таки хороша! Все дело в хорошо отобранных помидорах, которые успели созреть, но не переспеть – в меру плотные, мягкие и приправленные соусом из собственной мякоти</string>
+    <string name="info_4"> Mexican одна из лидирующих позиций при заказе пиццы на большие компании. Решает проблемы на корню, как только в офисе или компании друзей завязывается спор — какую начинку выбрать. Разнообразие четырех вкусов способно удовлетворить гастрономические потребности каждого за столом</string>
 </resources>
